--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,6 @@
 /coverage
 
 # next.js
-.next/
 /.next/
 /out/
 
@@ -24,14 +23,17 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
 
 # local env files
-.env*.local
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # vercel
 .vercel
 
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# pwa
+**/public/workbox-*.js
+**/public/sw.js
+**/public/fallback-*.js
