--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@chakra-ui/react": "^2.0.2",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "chart.js": "^3.9.1",
     "framer-motion": "^6",
     "lodash": "^4.17.21",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-beautiful-dnd": "^13.1.0",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "18.1.0",
     "react-icons": "^4.4.0"
   },
