--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^6",
     "lodash": "^4.17.21",
     "next": "12.1.6",
+    "next-seo": "^5.5.0",
     "react": "18.1.0",
     "react-beautiful-dnd": "^13.1.0",
     "react-chartjs-2": "^4.3.1",
