--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@chakra-ui/react": "^2.0.2",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@preact/signals": "^1.1.1",
     "chart.js": "^3.9.1",
     "framer-motion": "^6",
     "lodash": "^4.17.21",
